--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "@angular/upgrade": "^4.1.2",
     "core-js": "^2.4.1",
     "zone.js": "^0.8.10"
+  },
+  "devDependencies": {
+    "angular-router-loader": "^0.6.0",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.1.3",
+    "del-cli": "^1.0.0",
+    "html-loader": "^0.4.5",
+    "raw-loader": "^0.5.1",
+    "typescript": "^2.3.2"
   }
 }
