--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "awesome-typescript-loader": "^3.1.3",
     "del-cli": "^1.0.0",
     "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
-    "typescript": "^2.3.2"
+    "typescript": "^2.3.2",
+    "webpack-merge": "^4.1.0"
   }
 }
