--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "An Angular base set up",
   "main": "index.js",
+  "scripts": {
+    "build": "webpack-dev-server --inline --progress --port 8080 --config webpack.config.dev.js"
+  },
   "author": "Richard Durazo",
   "license": "MIT",
   "dependencies": {
@@ -19,6 +22,7 @@
     "@angular/router": "^4.1.2",
     "@angular/upgrade": "^4.1.2",
     "core-js": "^2.4.1",
+    "rxjs": "^5.4.0",
     "zone.js": "^0.8.10"
   },
   "devDependencies": {
@@ -30,6 +34,8 @@
     "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
     "typescript": "^2.3.2",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0"
   }
 }
