--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An Angular base set up",
   "main": "index.js",
   "scripts": {
-    "build": "webpack-dev-server --inline --progress --port 8080 --config webpack.config.dev.js"
+    "build": "webpack-dev-server --inline --progress --port 8080 --config webpack.config.dev.js",
+    "build:prod": "del-cli dist && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'src/app/**/*.js' 'src/app/**/*.ngfactory.ts' 'src/app/**/*.js.map' 'src/app/**/*.shim.ts' 'src/app/**/*.ngsummary.json' 'src/app/**/*.ngstyle.ts' 'dist/app'",
+    "serve": "lite-server"
   },
   "author": "Richard Durazo",
   "license": "MIT",
@@ -22,10 +24,13 @@
     "@angular/router": "^4.1.2",
     "@angular/upgrade": "^4.1.2",
     "core-js": "^2.4.1",
+    "lite-server": "^2.3.0",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.10"
   },
   "devDependencies": {
+    "@types/core-js": "0.9.36",
+    "@types/node": "6.0.45",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
